<resources>
    <string name="app_name">LabExam4</string>
    <string name="name">My Diary</string>
    <string name="add_friend">Add a friend</string>
    <string name="friend_name"> Enter Name</string>
    <string name="telephone_no">Enter Telephone No.</string>
    <string name="address">Enter Address</string>
    <string name="birthday">Enter Birthday</string>
    <string name="display_name">Name</string>
    <string name="display_telephone">Telephone No</string>
    <string name="display_address">Address</string>
    <string name="display_birthday">Birthday</string>
    <string name="edit_friend">Edit Details</string>


</resources>