<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_name"
                android:textSize="18sp"
                android:textColor="@color/purple"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/baseline_create_24"/>

            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"

                android:src="@drawable/baseline_delete_24"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/telephoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_telephone"
            android:maxLines="3"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_address"
            android:maxLines="3"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/birthdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_birthday"
            android:maxLines="3"
            android:layout_marginTop="4dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>